--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -2,6 +2,7 @@
   <div class="row">
     <div class="col-3">
       <div class="m-5 text-center">
+        <%= link_to "新規登録", new_user_registration_path, class: "btn btn-info mb-5" %>
         <%= link_to "ゲストログイン", user_guest_sign_in_path, class: "btn btn-outline-dark sign_in", method: :post %>
       </div>
       <%= render "layouts/prefecture", prefectures: @prefectures %>
@@ -48,8 +49,11 @@
           <% end %>
 		      </div>
 		    <% end %>
+
+		    <%= link_to "もっとレビューをみる", souvenirs_reviews_path, class: "btn btn-success ml-auto mb-3" %>
+
       </div>
-      <h3 class="m-2">おみやげを探す</h3>
+      <h3 class="m-2">ミヤゲを探す</h3>
       <h3 class="m-3">タグ</h3>
       <div class="row">
         <% Tag.all.each do |tag| %>
