--- a/app/views/public/reviews/show.html.erb
+++ b/app/views/public/reviews/show.html.erb
@@ -5,13 +5,16 @@
     </div>
 
     <div class="col-8 offset-1 pt-5">
-      <h3 class="mb-3">
-        <% if @review.user.is_deleted == false %>
-          <%= @review.user.nickname %> さんの
-        <% else @review.user.is_deleted == true %>
-          <span>退会済みユーザー</span> の
-        <% end %>
-      </h3>
+      <%= link_to user_reviews_index_path(@review.user), data: {"turbolinks" => false} do %>
+        <h3 class="mb-3">
+          <% if @review.user.is_deleted == false %>
+            <%= @review.user.nickname %> さんの
+          <% else @review.user.is_deleted == true %>
+            <span>退会済みユーザー</span> の
+          <% end %>
+        </h3>
+      <% end %>
+
       <h2 class="text-center"><%= @souvenir.souvenir_name %> のレビュー詳細</h2>
       <div class="m-3 text-center">
         <% if @review.user == current_user %>
@@ -29,10 +32,12 @@
               <tr>
                 <td class="text-center col-6">表示名（ユーザー名）</td>
                 <td class="col-6">
-                  <% if @review.user.is_deleted == false %>
-                    <%= @review.user.nickname %>
-                  <% else @review.user.is_deleted == true %>
-                    <span>退会済みユーザー</span>
+                  <%= link_to user_reviews_index_path(@review.user), data: {"turbolinks" => false} do %>
+                    <% if @review.user.is_deleted == false %>
+                      <%= @review.user.nickname %>
+                    <% else @review.user.is_deleted == true %>
+                      <span>退会済みユーザー</span>
+                    <% end %>
                   <% end %>
                 </td>
               </tr>
