--- a/app/views/public/homes/search_category.html.erb
+++ b/app/views/public/homes/search_category.html.erb
@@ -11,12 +11,13 @@
     	  <% else params[:name] == "goods" %>
     	    <h2 class="text-center">グッズ のミヤゲ一覧</h2>
     	  <% end %>
-        <p class="text-right mr-5">全 <%= @souvenirs.count %> 件</p>
+    	  <div class ="m-2 text-right">
+          <%= link_to "戻る", root_path, class: "btn btn-outline-secondary" %>
+        </div>
+        <p class="text-right mt-5 mr-5">全 <%= @souvenirs.count %> 件</p>
       </div>
 
-      <div class ="m-2 text-right">
-        <%= link_to "戻る", root_path, class: "btn btn-outline-secondary" %>
-      </div>
+
 
       <div class="row">
         <%= render "public/souvenirs/index", souvenirs: @souvenirs %>
