--- a/app/views/public/homes/search_column.html.erb
+++ b/app/views/public/homes/search_column.html.erb
@@ -15,12 +15,13 @@
             <h2 class="text-center"><%= review.usefulness_i18n %>　のレビューがついたミヤゲ一覧</h2>
           <% end %>
         <% end %>
-       <p class="text-right mr-5">全 <%= @souvenirs.count %> 件</p>
+        <div class ="m-2 text-right">
+          <%= link_to "戻る", root_path, class: "btn btn-outline-secondary" %>
+        </div>
+       <p class="text-right mt-5 mr-5">全 <%= @souvenirs.count %> 件</p>
       </div>
 
-      <div class ="m-2 text-right">
-        <%= link_to "戻る", root_path, class: "btn btn-outline-secondary" %>
-      </div>
+
 
       <div class="row">
         <%= render "public/souvenirs/index", souvenirs: @souvenirs %>
