--- a/app/views/public/homes/search_prefecture.html.erb
+++ b/app/views/public/homes/search_prefecture.html.erb
@@ -5,13 +5,14 @@
     </div>
 
     <div class="col-8 offset-1 pt-5">
-      <div class="mb-5">
+      <div class="mb-3">
         <h2 class="text-center"><%= @prefecture.prefecture_name %> のミヤゲ一覧</h2>
-        <p class="text-right mr-5">全 <%= @souvenirs.count %> 件</p>
+        <div class ="m-3 text-right">
+          <%= link_to "戻る", root_path, class: "btn btn-outline-secondary mt-3" %>
+        </div>
+        <p class="text-right mt-5 mr-5">全 <%= @souvenirs.count %> 件</p>
       </div>
-      <div class ="m-3 text-right">
-        <%= link_to "戻る", root_path, class: "btn btn-outline-secondary" %>
-      </div>
+
 
       <div class="row">
        <%= render "public/souvenirs/index", souvenirs: @souvenirs %>
