--- a/app/views/public/homes/search_souvenir.html.erb
+++ b/app/views/public/homes/search_souvenir.html.erb
@@ -6,13 +6,14 @@
 
     <div class="col-8 offset-1 pt-5">
       <% if @souvenirs.present? %>
-    	  <div class="mb-5">
+    	  <div class="mb-3">
           <h2 class="text-center"><%= @q.souvenir_name_cont %> の検索結果</h2>
-          <p class="text-right mr-5">全 <%= @souvenirs.count %> 件</p>
+          <div class ="m-3 text-right">
+            <%= link_to "戻る", root_path, class: "btn btn-outline-secondary" %>
+          </div>
+          <p class="text-right mt-5 mr-5">全 <%= @souvenirs.count %> 件</p>
         </div>
-        <div class ="m-3 text-right">
-          <%= link_to "戻る", root_path, class: "btn btn-outline-secondary" %>
-        </div>
+
         <div class="row">
           <%= render "public/souvenirs/index", souvenirs: @souvenirs %>
 	      </div>
