--- a/app/views/public/souvenirs/index.html.erb
+++ b/app/views/public/souvenirs/index.html.erb
@@ -15,12 +15,13 @@
         <% else %>
           <h2 class="text-center">ミヤゲ一覧</h2>
         <% end %>
-        <p class="text-right mr-5">全 <%= @souvenirs.count %> 件</p>
+        <div class ="m-2 text-right">
+          <%= link_to "戻る", root_path, class: "btn btn-outline-secondary" %>
+        </div>
+        <p class="text-right mt-5 mr-5">全 <%= @souvenirs.count %> 件</p>
       </div>
 
-      <div class ="m-2 text-right">
-        <%= link_to "戻る", root_path, class: "btn btn-outline-secondary" %>
-      </div>
+
       <div class="m-3">
         <%= form_with model: @souvenir, url: souvenirs_path, method: :get, local: true do |f| %>
           <%= f.select :keyword, [ ['ほしい！多い順', 'wants'],
